[project]
name = "polars-timeseries-utils"
version = "0.1.0"
description = "Library with utility functions for Polars DataFrames, similar to scikit-learn & pandas functionalities."
readme = "README.md"
authors = [
    { name = "Leon David Zipp", email = "leondavidzipp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
