[project]
name = "polars-timeseries-utils"
version = "0.1.3"
description = "Library with utility functions for Polars DataFrames, similar to scikit-learn & pandas functionalities."
readme = "README.md"
authors = [
    { name = "Leon David Zipp", email = "leondavidzipp@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/LeonDavidZipp/polars-timeseries-utils"
Repository = "https://github.com/LeonDavidZipp/polars-timeseries-utils"
Issues = "https://github.com/LeonDavidZipp/polars-timeseries-utils/issues"
Documentation = "https://github.com/LeonDavidZipp/polars-timeseries-utils/#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
